--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "superagent-csrf": "^1.0.0",
     "terser-webpack-plugin": "^5.3.10",
     "uuid": "^9.0.0",
-    "webpack": "^5.93.0",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^7.3.0",
     "webpack-merge": "^6.0.1"
@@ -133,6 +133,7 @@
     "qs": "^6.11.2",
     "redis": "^3.1.1",
     "braces": "^3.0.3",
+    "micromatch": "^4.0.8",
     "puppeteer": "^23.2.0"
   },
   "packageManager": "yarn@3.5.1"
