--- a/charts/sscs-tribunals-frontend/values.preview.template.yaml
+++ b/charts/sscs-tribunals-frontend/values.preview.template.yaml
@@ -5,7 +5,7 @@ nodejs:
     enabled: false
   environment:
     NODE_ENV: "preview"
-    TRIBUNALS_CASE_API_URL: http://sscs-tribunals-api-pr-3783.preview.platform.hmcts.net
+    TRIBUNALS_CASE_API_URL: https://sscs-tribunals-api-pr-3783.preview.platform.hmcts.net
     REDIS_URL: redis://${SERVICE_NAME}-redis-master
     APPINSIGHTS_ROLE_NAME: ${SERVICE_NAME}
     PCQ_URL: "https://pcq.aat.platform.hmcts.net"
