--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "csurf": "^1.11.0",
-    "express": "^4.19.2",
+    "express": "^4.20.0",
     "express-nunjucks": "^3.1.2",
     "file-loader": "^6.2.0",
     "formidable": "^3.5.1",
@@ -121,7 +121,7 @@
     "proxyquire": "^2.1.3",
     "puppeteer": "^23.2.0",
     "rewire": "^7.0.0",
-    "sinon": "^15.2.0",
+    "sinon": "^18.0.0",
     "sinon-chai": "^3.7.0",
     "supertest": "^6.3.3",
     "webdriverio": "8.10.5",
@@ -133,7 +133,9 @@
     "qs": "^6.11.2",
     "redis": "^3.1.1",
     "micromatch": "^4.0.8",
-    "puppeteer": "^23.2.0"
+    "puppeteer": "^23.2.0",
+    "express": "^4.20.0",
+    "router/path-to-regexp": "^0.1.10"
   },
   "packageManager": "yarn@3.5.1"
 }
