--- a/package.json
+++ b/package.json
@@ -135,7 +135,8 @@
     "micromatch": "^4.0.8",
     "puppeteer": "^23.2.0",
     "express": "^4.20.0",
-    "router/path-to-regexp": "^0.1.10"
+    "router/path-to-regexp": "^0.1.10",
+    "send": "^0.19.0"
   },
   "packageManager": "yarn@3.5.1"
 }
