--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "webpack-node-externals": "3.0.0"
   },
   "resolutions": {
+    "express": "^4.21.0",
     "debug": "^3.2.7",
     "json-schema": "^0.4.0",
     "qs": "^6.11.2",
