--- a/package.json
+++ b/package.json
@@ -134,7 +134,8 @@
     "qs": "^6.11.2",
     "redis": "^3.1.1",
     "micromatch": "^4.0.8",
-    "puppeteer": "^23.2.0"
+    "puppeteer": "^23.2.0",
+    "path-to-regexp": "^0.1.10"
   },
   "packageManager": "yarn@3.5.1"
 }
